# rosie_object_detector

./: CMakeLists.txt  README.md  controller_params.yaml  label_image.py  object_detector_params.yaml  package.xml  retrained_labels.txt
launch/: rosie_object_detector.launch
msg/: RAS_Evidence.msg
src/: classify_image_server.py  classify_image_server_updated.py  motor_controller_node.cpp  motor_object_detector.cpp  python_object_detector.py  xxx.cpp
src/data/: retrained_labels.txt
srv/: ObjectClassify.srv
